clippath fix

--- a/mini/less/style.less
+++ b/mini/less/style.less
@@ -330,11 +330,11 @@ a:hover, a:active, a:visited, a:focus{
 	left: 0;
 }
 .clip-path-block-1 {
-	clip-path: polygon(0 0, 100% 0, 0 100%);
+	clip-path: polygon(0 0, 105% 0, 0 100%);
 	top: -2px;
 }
 .clip-path-block-2 {
-	clip-path: polygon(100% 0, 0 100%,100% 100%);
+	clip-path: polygon(100% 0, -5% 100%,100% 100%);
 	bottom: -2px;
 }
 .parallax-window {
